# fantasy-premier-league

./: .gitignore  README.md  pyproject.toml
data_ingestion/: data_utils.py
exploration/24-25/: past_season_eda.ipynb
player_selection/24-25/: starting_squad.py
